Prevent clipping of wide tables (like scheduling matrix)

--- a/esp/public/media/styles/uchicago_main.css
+++ b/esp/public/media/styles/uchicago_main.css
@@ -44,7 +44,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   background: #141414;
-  overflow: hidden;
 }
 
 #topleft {
